--- a/package.json
+++ b/package.json
@@ -1,15 +1,33 @@
 {
-  "name": "nuxt-starter",
+  "name": "zal1000.me",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt dev",
+    "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@nuxt/content": "^1.14.0",
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/pwa": "^3.3.5",
+    "core-js": "^3.15.1",
+    "nuxt": "^2.15.7",
+    "sass": "^1.37.5",
+    "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
-    "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "@nuxt/types": "^2.15.7",
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/tailwindcss": "^4.2.0",
+    "@vue/test-utils": "^1.2.1",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^27.0.5",
+    "jest": "^27.0.5",
+    "postcss": "^8.3.5",
+    "ts-jest": "^27.0.3",
+    "vue-jest": "^3.0.4"
   }
 }
