--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "sass": "^1.37.5",
-    "tailwindcss": "^2.2.7"
+    "tailwindcss": "^2.2.7",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.7",
